--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,12 +12,15 @@
          name="description"
          content="Web site created using create-react-app"
       />
+
+      <!--Font Inter-->
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
-         href="https://fonts.googleapis.com/css2?family=Acme&display=swap"
+         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap"
          rel="stylesheet"
       />
+      <!--Font Inter-->
 
       <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
